// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders clusters disabled message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-1"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Search
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-1"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
        style="box-shadow: none;"
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="css-k008qs"
          >
            <div
              class="css-19gc7lg"
            >
              <svg
                aria-hidden="true"
                class="css-xeknh8"
                fill="var(--pf-global--warning-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <span
              style="margin-left: .4rem;"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link css-1dkl6e6"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Search is disabled on some clusters.
              </button>
            </span>
          </div>
        </div>
      </article>
    </div>
  </div>
</body>
`;

exports[`renders empty message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-2"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Search
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders unknown message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-3"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Search
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-2"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
        style="box-shadow: none;"
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="css-k008qs"
          >
            <div
              class="css-19gc7lg"
            >
              <svg
                aria-hidden="true"
                class="css-xeknh8"
                fill="var(--pf-global--warning-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <span
              style="margin-left: .4rem;"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link css-1dkl6e6"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Search is disabled on some clusters.
              </button>
            </span>
          </div>
        </div>
      </article>
    </div>
  </div>
</body>
`;

exports[`renders with Global Search alert & no message 1`] = `
<body>
  <div>
    <div
      style="outline: none; display: flex; justify-content: flex-end;"
    >
      <div
        style="flex: 1;"
      >
        <div
          class="MuiCollapse-root MuiCollapse-vertical css-1fkrdiv-MuiCollapse-root"
          style="min-height: 0px; height: 0px; transition-duration: 150ms;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                aria-label="Info Alert"
                class="pf-c-alert pf-m-inline pf-m-info"
                data-ouia-component-id="OUIA-Generated-Alert-info-1"
                data-ouia-component-type="PF4/Alert"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-alert__icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
                <h4
                  class="pf-c-alert__title"
                >
                  <span
                    class="pf-u-screen-reader"
                  >
                    Info alert:
                  </span>
                  Global search is enabled. Resources across all your managed hubs and clusters will be shown.
                </h4>
              </div>
            </div>
          </div>
        </div>
        <section
          class="pf-c-page__main-section pf-m-no-padding pf-m-light"
        >
          <div
            class="pf-l-split"
          >
            <div
              class="pf-l-split__item pf-m-fill"
            >
              <div
                class="pf-l-stack pf-m-gutter"
              >
                <div
                  class="pf-l-stack__item pf-m-fill"
                >
                  <section
                    class="pf-c-page__main-section pf-m-light"
                  >
                    <div
                      class="pf-l-stack pf-m-gutter"
                    >
                      <div
                        class="pf-l-stack__item pf-m-fill"
                      >
                        <div
                          class="pf-l-split pf-m-gutter"
                        >
                          <div
                            class="pf-l-split__item"
                          >
                            <div
                              class="pf-c-content"
                            >
                              <h1
                                class="pf-c-title pf-m-2xl"
                                data-ouia-component-id="OUIA-Generated-Title-4"
                                data-ouia-component-type="PF4/Title"
                                data-ouia-safe="true"
                              >
                                Global search
                              </h1>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</body>
`;
